[making the pages responsive]

--- a/individual-camp.html
+++ b/individual-camp.html
@@ -11,6 +11,7 @@
     <!-- beginning of of page -->
     <!-- upper part of page -->
     <div>
+        <img class="hamMenu" src="./Yelp_Camp_Starter_Files_90fefc073f/YelpCamp Starter Files/Assets/Hamburger Menu.svg" alt="">
         <img class="main-logo" src="./Yelp_Camp_Starter_Files_90fefc073f/YelpCamp Starter Files/Assets/Logo.svg" alt="">
         <a style="text-decoration: none;" href="./index.html"><p class="home">Home</p></a>
         <a style="text-decoration: none;" href="./sign-in.html"><p class="logout">Logout</p></a>
