--- a/search-page.html
+++ b/search-page.html
@@ -6,20 +6,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>YelpCamp</title>
     <link rel="stylesheet" href="./bootstrap-5.0.2-dist/css/bootstrap.css">
+    <link rel="stylesheet" href="./bootstrap-5.0.2-dist/css/bootstrap.min.css">
+  <script src="./bootstrap-5.0.2-dist/js/bootstrap.bundle.min.js"></script>
 </head>
 <body>
     <link rel="stylesheet" href="./css/search-page.css">
     <!-- top page -->
-    <div>
+    <div class="container-fluid">
         <img src="./Yelp_Camp_Starter_Files_90fefc073f/YelpCamp Starter Files/Assets/Logo.svg" alt="" class="main-logo">
         <a style="text-decoration: none;" href="./index.html"><p class="home">Home</p></a>
         <p class="johndoe">johndoe_91</p>
         <a style="text-decoration: none;" href="./sign-in.html"><p class="logout">Logout</p></a>
-    </div>
+      </div>
       <!-- ending of top page -->
       <!-- welcome text -->
       <div class="welcome-txt">
-        <h1 class="main-txt">Welcome To YelpCamp! </h1>
+        <h1 class="main-txt">Welcome to YelpCamp! </h1>
         <p class="yelp-descriptions">View our hand picked campground from all over <br> the world,or add your own.</p>
         <input type="search" placeholder="Search for camps" class="search-for-camps">
         <img src="./Yelp_Camp_Starter_Files_90fefc073f/YelpCamp Starter Files/Assets/Search Icon.svg" alt="" class="search-icon">
@@ -62,7 +64,7 @@
         <P class="Mount-Ulap-txt">Buloy Springs</P>
         <p class="Mount-Ulap-description">This is one of the best beach camping <br>sites,beatiful and pristine</p>
         <button type="submit" class="Mount-Ulap-button">View campground</button>
-      </div>
+    </div>
       <img src="./Yelp_Camp_Starter_Files_90fefc073f/YelpCamp Starter Files/Assets/Logo.svg" alt="" class="main-logo">
 </body>
 </html>
