--- a/sign-in.html
+++ b/sign-in.html
@@ -6,11 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>YelpCamp</title>
     <link rel="stylesheet" href="./css/sign-up.css">
-    <link rel="stylesheet" href="./bootstrap-5.0.2-dist/css/bootstrap.css">
+    <!-- <link rel="stylesheet" href="./bootstrap-5.0.2-dist/css/bootstrap.css"> -->
+    <link rel="stylesheet" href="./bootstrap-5.0.2-dist/css/bootstrap.min.css">
+  <script src="./bootstrap-5.0.2-dist/js/bootstrap.bundle.min.js"></script>
+
 </head>
 <body>
     <!-- main text holder and form  -->
-    <div>
+<div>
         <img src="./Yelp_Camp_Starter_Files_90fefc073f/YelpCamp Starter Files/Assets/Logo.svg" alt="main-logo" class="main-logo">
         <a style="text-decoration: none;" href="./search-page-not-logged-in.html"><p class="back-to-campground">Back to campgrounds</p></a>
         <h1 class="main-txt">Start exploring camps from all <br> around the world</h1>
@@ -20,16 +23,21 @@
             <button type="button" class="create-an-account-button">Login</button>
             <p class="already-a-user">Not yet a user? <a href="./sign-up.html">Create an account</a></p>
         </div>
-    </div>
+    </div class="container-fluid">
     <!-- second section with quote -->
-<div class="aside">
-    <div class="text-aside-holder">
-        <h3 class="text-aside">"YelpCamp has honestly <br>saved me hours of <br>research time,and the <br>camps on here are <br>definitely well picked and <br>added".</h3>
+    <div>
+
+        <div class="aside">
+            <div class="text-aside-holder">
+                <div class=".container-fluid">
+                    <h3 class="text-aside">"YelpCamp has honestly <br>saved me hours of <br>research time,and the <br>camps on here are <br>definitely well picked and <br>added".</h3>
+                </div>
         <img src="./Yelp_Camp_Starter_Files_90fefc073f/YelpCamp Starter Files/Assets/User Testimonial.svg" alt="">
         <p style="margin-left: 3.5em; margin-top: -2.8em;"><b>May Andrews</b><br><p style="color: grey; margin-left:3.5em; margin-top: -1em;">Professional Hiker</p></p>
     </div>
-<div> 
+    <div> 
 </div>
 <!-- end of second section -->
+</div>
 </body>
 </html>
