--- a/create-new-campground.html
+++ b/create-new-campground.html
@@ -10,29 +10,29 @@
 <body>
     <link rel="stylesheet" href="./css/create-new-campground.css">
     <!-- top page -->
-    <div>
-        <img src="./Yelp_Camp_Starter_Files_90fefc073f/YelpCamp Starter Files/Assets/Logo.svg" alt="" class="main-logo">
-        <a style="text-decoration: none;" href="./index.html"><p class="home">Home</p></a>
-        <p class="johndoe">johndoe_91</p>
-        <a style="text-decoration: none;" href="./sign-in.html"><p class="logout">Logout</p></a>
+    <img src="./Yelp_Camp_Starter_Files_90fefc073f/YelpCamp Starter Files/Assets/Logo.svg" alt="" id="main-logo">
+    <img src="./Yelp_Camp_Starter_Files_90fefc073f/YelpCamp Starter Files/Assets/Hamburger Menu.svg" id="hamMenu" alt="menu">
+    <div id="nav" onclick="fun()">
+        <a style="text-decoration: none;" href="./index.html"><p id="home">Home</p></a>
+        <p id="johndoe">johndoe_91</p>
+        <a style="text-decoration: none;" href="./sign-in.html"><p id="logout">Logout</p></a>
     </div>
-      <!-- ending of top page -->
-        <div>
-        <!-- center page -->
-        <h1 class="add-new-campground">Add New Campground</h1>
-        <p class="campground-name">Campground Name</p>
-        <input type="text" class="campground-name-input" placeholder="Seven Sisters Waterfall">
-        <p class="price">Price</p>
-        <input type="text" class="price-input" placeholder="$149">
-        <p class="image">Image</p>
-        <input type="text" class="image-input " placeholder="">
-        <p class="description">Description</p>
-        <input type="text" class="description-input" placeholder="">
-        <button type="submit" class="create-campground-button">Add Campground</button>
-        <!-- ending of center page -->
-    </div>
-    <div>
-        <img src="./Yelp_Camp_Starter_Files_90fefc073f/YelpCamp Starter Files/Assets/Logo.svg" alt="" class="main-logo-2">
-    </div>
+            <!-- ending of top page -->
+<div id="all">
+
+    <h1 id="add-new-campground">Add New Campground</h1>
+    <p id="campground-name">Campground Name</p>
+    <input type="text" id="campground-name-input" placeholder="Seven Sisters Waterfall">
+    <p id="price">Price</p>
+    <input type="text" id="price-input" placeholder="$149">
+    <p id="image">Image</p>
+    <input type="text" id="image-input" placeholder="">
+    <p id="description">Description</p>
+    <input type="text" id="description-input" placeholder="">
+    <button type="submit" id="create-campground-button">Add Campground</button>
+    <!-- ending of center page -->
+    <img src="./Yelp_Camp_Starter_Files_90fefc073f/YelpCamp Starter Files/Assets/Logo.svg" alt="" id="main-logo-2">
+</div>
 </body>
+<script src="./js/create-new-campground.js"></script>
 </html>
