--- a/index.html
+++ b/index.html
@@ -10,10 +10,11 @@
 <body>
     <link rel="stylesheet" href="./css/index.css">
     <!-- beginning of the left side -->
+<div class="all">
+    <img src="./Yelp_Camp_Starter_Files_90fefc073f/YelpCamp Starter Files/Assets/Logo.svg" alt="main-logo" class="main-logo">
     <div class="all-in-the-left">
-        <img src="./Yelp_Camp_Starter_Files_90fefc073f/YelpCamp Starter Files/Assets/Logo.svg" alt="main-logo" class="main-logo">
         <h1 class="main-txt">Explore the best <br> camps on Earth.</h1>
-        <p class="main-discription">Yelpcamp is a curated list of the best camping spots on <br>Earth.Unfilted and Unbiased reveiws.</p>
+        <p class="main-discription">Yelpcamp is a curated list of the best camping spots on Earth.<br>Unfilted and Unbiased reveiws.</p>
         <img src="./Yelp_Camp_Starter_Files_90fefc073f/YelpCamp Starter Files/Assets/Checkmark.svg" alt="" class="check-mark">
         <p class="add-suggestion">Add your own camp suggestions.</p>
         <img src="./Yelp_Camp_Starter_Files_90fefc073f/YelpCamp Starter Files/Assets/Checkmark.svg" alt="" class="check-mark">
@@ -25,11 +26,12 @@
         <img src="./Yelp_Camp_Starter_Files_90fefc073f/YelpCamp Starter Files/Assets/Airbnb.svg" alt="" class="airbnb">
         <img src="./Yelp_Camp_Starter_Files_90fefc073f/YelpCamp Starter Files/Assets/Booking.svg" alt="" class="booking">
         <img src="./Yelp_Camp_Starter_Files_90fefc073f/YelpCamp Starter Files/Assets/Plum Guide.svg" alt="" class="plumguide">
+        <a href="./sign-in.html"><button class="sign-in-button">Sign In</button></a>
     </div>
     <!-- ending of the left side -->
     <div class="right-side">
         <img src="./Yelp_Camp_Starter_Files_90fefc073f/YelpCamp Starter Files/Assets/Hero Image.jpg" alt="" class="main-pic">
     </div>
-    <a href="./sign-in.html"><button class="sign-in-button">Sign In</button></a>
+</div>    
 </body>
 </html>
